--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cron": "^1.1.0",
     "jsdom": "^8.0.4",
     "log": "^1.4.0",
+    "mongoose": "^4.5.10",
     "slug": "^0.9.1",
     "sqlite3": "^3.1.1"
   },
